CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.3        |
+-----------------------+
BUGFIXES
09-11-05    Fixed small bug where backdating date comboboxes wasn't working
            (Werner Krauss)
31-10-05	Fixed broken config calls in templates
26-10-05    Registration emails are no longer CCed to admin, separate notification
            is sent.

IMPROVEMENTS
10-11-05    Moved MaintenanceMgr to 'default' module
10-11-05    Moved all SQL data to respective modules (modules, perms, role_perm
            assignments) by creating an auto-increment token in data and using
            dynamic inserts
09-11-05    Added ability for sql parser to auto-increment records when PK is marked
            with {SGL_NEXT_ID} token
09-11-05    Added ability to add all or minimum modules
09-11-05    Added ability to remove frontScriptName and have even clearner urls than
            previously, eg, now available: http://example.com/user/login/
            Option currently only available to apache users with mod_rewrite enabled,
            to activate set [site][frontScriptName] = false and copy
            seagull/etc/htaccess-cleanUrl.dist to seagull/www/.htaccess and make sure
            the file is readable by the webserver (Julien Casanova)
09-11-05    Added ability to backdate articles (Werner Krauss)
09-11-05    Removed unnecessary framebuster from login page
06-11-05    Split web tests into modules
06-11-05    Moved all core classes that doubled up with other classes to reduce
            file loading to seagull/lib/SGL/Other.php.  Currently this contains
            SGL_Array, SGL_Date and SGL_Inflector.  Should make libs easier to find:
            if you don't see a file named the same as the lib you want, it will most
            likely be in Other.php
04-11-05    New wizard can only be accessed if admin knows password stored in
            seagull/var/INSTALL_COMPLETE.php.  Installer is invoked automatically